# robot

./: .gitignore  README.md  pyproject.toml
src/robot/: cli.py  llm.py
tests/: test_cli.py  test_llm.py
